--- a/fitzhugh-nagumo.ipynb
+++ b/fitzhugh-nagumo.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FizHugh-Nagumo Simulator\n",
+    "# FitzHugh-Nagumo Simulator\n",
+    "\n",
+    "See references [here](https://en.wikipedia.org/wiki/FitzHugh%E2%80%93Nagumo_model) and [here](https://arxiv.org/pdf/1504.07565.pdf)\n",
     "\n",
     "Let\n",
     "\n",
@@ -435,7 +437,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Unit step impulse\n",
